config-management/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: antho-config
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-d
